--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "siftarray"
+name = "jaf"
 version = "0.1.0"
-description = "A versatile filtering system for JSON arrays."
+description = "JSON Array Filter (jaf) is a versatile filter for JSON arrays. It is a domain-specific language (DSL) that allows you to filter JSON arrays using a simple, yet powerful syntax. Programmaticcally, the AST can be used to filter JSON arrays in a more flexible way."
 authors = [
     { name = "Alex Towell", email = "lex@metafunctor.com" }
 ]
@@ -21,6 +21,6 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/queelius/SiftArray"
-Documentation = "https://github.com/queelius/SiftArray#readme"
-Repository = "https://github.com/queelius/SiftArray"
+Homepage = "https://github.com/queelius/jaf"
+Documentation = "https://github.com/queelius/jaf#readme"
+Repository = "https://github.com/queelius/jaf"
