--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "jaf"
-version = "0.2.0"
-description = "JSON Array Filter (`jaf`) is a versatile filter for JSON arrays. It is a domain-specific language (DSL) that allows you to filter JSON arrays using a simple, yet powerful syntax. Programmatically, the AST can be used to filter JSON arrays in a more flexible way."
+version = "0.3.0"
+description = "JSON Array Filter (jaf) is a versatile filter for JSON arrays. It is a domain-specific language (DSL) that allows you to filter JSON arrays using a simple, yet powerful syntax. Programmatically, the AST can be used to filter JSON arrays in a more flexible way."
 authors = [
     { name = "Alex Towell", email = "lex@metafunctor.com" }
 ]
@@ -19,16 +19,12 @@ classifiers = [
 ]
 dependencies = [
     "lark-parser",
-    "rapidfuzz" # Added based on jaf_eval.py import
+    "rapidfuzz"
 ]
 
 # Specify package discovery
 [tool.setuptools.packages.find]
 include = ["jaf", "jaf.*"]
-
-# Include package data
-[tool.setuptools.package-data]
-"jaf.dsl" = ["grammar.lark"]
 
 [project.urls]
 Homepage = "https://github.com/queelius/jaf"
