--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,19 @@ include = ["jaf", "jaf.*"]
 
 [project.urls]
 Homepage = "https://github.com/queelius/jaf"
-Documentation = "https://github.com/queelius/jaf#readme"
+Documentation = "https://queelius.github.io/jaf" # Updated to where gh-pages will be
 Repository = "https://github.com/queelius/jaf"
 
 [project.scripts]
 jaf = "jaf.console_script:main"
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "pytest-cov",
+    "mkdocs>=1.5.0",
+    "mkdocs-material>=9.0.0",
+    "pymdown-extensions>=10.0",
+    "build",
+    "twine"
+]
