--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,21 +4,20 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "jaf"
-version = "0.3.0"
+version = "0.5.0"
 description = "JSON Array Filter (jaf) is a versatile filter for JSON arrays. It is a domain-specific language (DSL) that allows you to filter JSON arrays using a simple, yet powerful syntax. Programmatically, the AST can be used to filter JSON arrays in a more flexible way."
 authors = [
     { name = "Alex Towell", email = "lex@metafunctor.com" }
 ]
 readme = "README.md"
 license = { text = "MIT License" }
-keywords = ["filter", "JSON", "AST", "DSL", "Lark", "parser", "array"]
+keywords = ["filter", "JSON", "AST", "DSL", "parser", "array"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "lark-parser",
     "rapidfuzz"
 ]
 
